manifests/minecraft-bedrock.yml
apiVersion: v1
kind: Service
metadata:
  name: bedrock
spec:
  type: NodePort
  ports:
    - name: ipv4
      protocol: UDP
      port: 19132
  selector:
    app: bedrock
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bedrock
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bedrock
  template:
    metadata:
      labels:
        app: bedrock
    spec:
      containers:
        - name: bedrock-server
          image: itzg/minecraft-bedrock-server:latest
          resources:
            limits:
              cpu: "2.0"
              memory: "512Mi"
          ports:
            - containerPort: 19132
