manifests/nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-test
  labels:
    app: nginx
  annotations:
    metallb.universe.tf/loadBalancerIPs: 172.28.2.89
spec:
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
  selector:
    app: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
          ports:
            - containerPort: 80
