manifests/wordpress.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
spec:
  type: NodePort
  selector:
    app: wordpress-web
  ports:
    - name: http
      protocol: TCP
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-web
spec:
  selector:
    matchLabels:
      app: wordpress-web
  template:
    metadata:
      labels:
        app: wordpress-web
    spec:
      containers:
        - name: wordpress-web
          image: wordpress:latest
          resources:
            limits:
              cpu: "2.0"
              memory: "512Mi"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-db
spec:
  type: NodePort
  selector:
    app: wordpress-db
  ports:
    - name: mysql
      protocol: TCP
      port: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress-db
  template:
    metadata:
      labels:
        app: wordpress-db
    spec:
      containers:
        - name: mysql
          image: mysql:latest
          resources:
            limits:
              cpu: "2.0"
              memory: "512Mi"
          ports:
            - containerPort: 3306
